# django-hierarchical-permissions

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/hierarchical_permissions/: apps.py  checker.py  conf.py  constants.py  creators.py  decorators.py  defaults.py  form.py  mixins.py  models.py  selectors.py  services.py  signals.py  strategies.py  utils.py
src/hierarchical_permissions/migrations/: 0001_initial.py
tests/: manage.py
tests/test_model_app/: models.py  rules.py
tests/test_model_app/migrations/: 0001_initial.py
tests/testsapp/: settings.py  urls.py
tests/testsuite/: test_constants.py  test_settings.py
tests/testsuite/constants/: test_extension.py  test_immutability.py
tests/testsuite/permissions/: conftest.py  test_model_level_permission.py  test_object_level_permission.py
